Changes name id in index.html for template-author-cloud-link

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
   <script id="template-Tag-link-in-article" type="text/x-handlebars-template">
     <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
 </script>
-  <script id="template-tag-cloud-link" type="text/x-handlebars-template">
+  <script id="template-author-cloud-link" type="text/x-handlebars-template">
     {{#each tags}}
   <li>{{ tag }}</li>
   {{/each}}
