--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     <li><a href="#{{ id }}"><span>{{ title }}</span></a></li>
 </script>
   <script id="template-author-cloud-link" type="text/x-handlebars-template">
-    {{#each tags}}
+    {{#each authors}}
   <li>{{ tag }}</li>
   {{/each}}
 </script>
