--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 </script>
   <script id="template-author-cloud-link" type="text/x-handlebars-template">
     {{#each authors}}
-  <li>{{ tag }}</li>
+  <li>{{ author }}</li>
   {{/each}}
 </script>
 
