--- a/index.html
+++ b/index.html
@@ -270,6 +270,12 @@
   <li><a href='#{{ id }}'><span>{{ author }}{{ count }}</span></a></li>
   {{/each}}
 </script>
+  <script id="template-tag-cloud-link" type="text/x-handlebars-template">
+    {{#each tags}}
+
+<li><a href='#{{ id }}'class="tag-size-{{ number }}"><span>{{ tag }}</span></a></li>
+{{/each}}
+</script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.0/handlebars.min.js"></script>
   <script src="js/script.js"></script>
